chore(sstable): collapse v1-v4 formats per pre-GA deprecation policy
First exercise of the pre-GA format-version deprecation policy
landed in 1e850f4. SSTable formats v1, v2, v3, and v4 are retired
before any consumer is bound to them; v5 (sstable.end-to-end-integrity)
is now the only on-disk format the writer emits and the reader accepts.

Code removed from jlsm.sstable.internal.SSTableFormat:
  MAGIC, MAGIC_V2, MAGIC_V3, MAGIC_V4
  FOOTER_SIZE, FOOTER_SIZE_V2, FOOTER_SIZE_V3, FOOTER_SIZE_V4
  COMPRESSION_MAP_ENTRY_SIZE, COMPRESSION_MAP_ENTRY_SIZE_V3

Reader paths removed from TrieSSTableReader:
  readFooterV1, readKeyIndexV1, and v1/v2/v3/v4 dispatch branches
  in readFooter

Writer paths removed from TrieSSTableWriter:
  writeFooterV1, writeFooterV3, writeFooterV4, finishV3Layout,
  finishWithDictionaryTraining, the dictionary-training Builder
  surface (dictionaryTraining, dictionaryBlockThreshold,
  dictionaryMaxBufferBytes, dictionaryMaxSize, formatVersion),
  DictionaryTrainingResult, and the "non-default blockSize requires
  a codec" Builder gate. The 2-arg/3-arg public constructors are
  retained but now produce v5 (with NoneCodec when no codec is
  supplied); every writer is v5 with stored blockSize.

Specs:
  sstable.format-v2 v1 -> v2 (DEPRECATED, superseded_by
    sstable.end-to-end-integrity)
  sstable.v3-format-upgrade v3 -> v4 (DEPRECATED, superseded_by
    sstable.end-to-end-integrity)
  Manifest mirrors. Both archived in .spec/CLAUDE.md.

Tests:
  Removed: SSTableFormatV3Test, SSTableFormatV4Test,
    SSTableV3IntegrationTest, DictionaryCompressionWriterTest,
    DictionaryCompressionReaderTest.
  Adversarial tests targeting v3-byte-layout reader bugs disabled
    with @Disabled reasons -- the bugs are masked by stronger v5
    integrity guards.
  Added SSTableV1V4CollapseTest: writer emits v5 magic on both
    constructors; reader rejects each legacy magic with
    IncompleteSSTableException carrying the unrecognised-magic
    vocabulary.

Encrypt